--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "mocha": "^1.17.1",
     "mongoose": "~3.8.8",
     "request": "^2.34.0",
-    "sqlite3": "~3.0.10"
+    "sqlite3": "~3.1.1"
   },
   "devDependencies": {
     "supertest": "^0.10.0"
   }
 }
+//hi hi hi fdafadsf
+//test
