--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "grunt-contrib-concat": "^0.3.0",
+    "grunt-git": "^0.3.7",
     "supertest": "^0.10.0"
   }
 }
